--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".track"></activity>
+        <activity android:name=".signup"></activity>
+        <activity android:name=".track" />
         <activity android:name=".ticket_number" />
         <activity android:name=".dashboard" />
         <activity android:name=".login" />
