--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ride_started"></activity>
+        <activity android:name=".new_screen"></activity>
+        <activity android:name=".ride_started" />
         <activity android:name=".starting_details" />
         <activity android:name=".new_ride_details" />
         <activity android:name=".booking_history" />
